--- a/buspain/res/values/strings.xml
+++ b/buspain/res/values/strings.xml
@@ -8,9 +8,12 @@
     <string name="bus_company">Bus Company</string>
     <string name="bus_expectedtime">Bus ExpectedTime</string>
     <string name="bus_prompt">Choose a bus company</string>
+
     <string-array name="bus_companies">
         <item>Arriva</item>
         <item>First</item>
     </string-array>
-    
+
+    <string name="title_activity_complaint">ComplaintActivity</string>
+
 </resources>
