--- a/buspain/res/values/strings.xml
+++ b/buspain/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">buspain</string>
+    <string name="app_name">BusPain</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="bus_no">Bus No.</string>
@@ -14,6 +14,9 @@
         <item>First</item>
     </string-array>
 
-    <string name="title_activity_complaint">ComplaintActivity</string>
+    <string name="title_activity_main">Bus App</string>
+    <string name="title_activity_complaint">Thanks</string>
+    <string name="Message">Thank you!</string>
+    <string name="title_activity_home">Home</string>
 
 </resources>
