--- a/buspain/res/values/strings.xml
+++ b/buspain/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">BusPain</string>
+    <string name="app_name">MisdaBus</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="bus_no">Bus No.</string>
